--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "jest:watch": "jest --watch",
     "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
-    "test": "npm run prettier:check && npm run lint && npm run typecheck && npm run jest",
+    "test": "jest --watch",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build"
   },
@@ -28,6 +28,7 @@
     "@next/bundle-analyzer": "^14.0.1",
     "@reduxjs/toolkit": "^2.2.2",
     "@tabler/icons-react": "^2.40.0",
+    "css-mediaquery": "^0.1.2",
     "js-cookie": "^3.0.5",
     "next": "14.0.1",
     "react": "18.2.0",
@@ -35,10 +36,13 @@
     "react-hook-form": "^7.49.2",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.5",
+    "regenerator-runtime": "^0.14.1",
+    "whatwg-fetch": "^3.6.20",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
+    "@jest/globals": "^29.7.0",
     "@next/eslint-plugin-next": "^14.0.1",
     "@storybook/addon-essentials": "^7.5.2",
     "@storybook/addon-styling-webpack": "^0.0.5",
@@ -46,10 +50,11 @@
     "@storybook/nextjs": "^7.5.2",
     "@storybook/react": "^7.5.2",
     "@storybook/testing-library": "^0.2.2",
-    "@testing-library/dom": "^9.3.3",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/css-mediaquery": "^0.1.4",
     "@types/jest": "^29.5.7",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.8.10",
